# automl-qild-experiments

./: .gitignore  Pipfile  README.md  cluster_script.py  cluster_script_ild.py  contants.py  copy_from_noctua.sh  copy_from_noctua2.sh  copy_from_pc2.sh  copy_from_vms.sh  copy_to_noctua.sh  copy_to_pc2.sh  copy_to_wuppertal.sh  create_final_results.py  dbconnection.py  delete_files.py  env_setup_pipenv.sh  insert_jobs.py  install_env.sh  list_directory_sizes.py  mine_sensitivity_analysis.py  pyproject.toml  read_utils.py  requirements.txt  requirements_val.txt  setup.py  sql_results  sql_statements  sql_statements_ild  sql_stms  util.py
cluster_scripts/: classification_experiment_run.sh  classification_experiments.sh  create_final_results.sh  exp_automl_batch.sh  exp_classification_batch.sh  exp_ild_batch.sh  exp_mi_batch.sh  exp_mi_gpu_batch.sh  exp_result_batch.sh  insert_jobs.sh  mi_experiment_run.sh  mine_sensitivity.sh
cvm_scripts/: check_counter.sh  exp_classification_batch.sh  exp_mi_batch.sh
database/: automl.running_jobs.csv  leakage_detection_padding.running_jobs.csv
experiments/: bayes_search.py  bayes_search_utils.py  contants.py  dbconnection.py  util.py  utils.py
logs/: .gitignore
pycilt/: __init__.py  bayes_predictor.py  bayes_search.py  bayes_search_utils.py  constants.py  contants.py  layers.py  metrics.py  mi_bounds.py  multi_layer_perceptron.py  read_utils.py  statistical_tests.py  synthetic_data_generator.py  synthetic_data_generator_distance.py  utils.py
results/: Additional_Generliaztion_Results
singularity/: compile_env.sh  pycilt.def  (+3 more)
(+74 files in other folders)
